--- a/mnist_tutorial.ipynb
+++ b/mnist_tutorial.ipynb
@@ -290,7 +290,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Reference : https://github.com/GunhoChoi/PyTorch-FastCampus"
       ],
       "execution_count": 0,
       "outputs": []
