--- a/MOT_tutorial.ipynb
+++ b/MOT_tutorial.ipynb
@@ -118,7 +118,7 @@
         "\n",
         "mot = \"My Drive/Colab Notebooks/MOT/\"   # a custom path. you can change if you want to\n",
         "MOT_PATH = join(root,mot)\n",
-        "#!mkdir \"{MOT_PATH}\""
+        "!mkdir \"{MOT_PATH}\""
       ],
       "execution_count": 0,
       "outputs": []
