--- a/MOT_tutorial.ipynb
+++ b/MOT_tutorial.ipynb
@@ -431,7 +431,7 @@
       "source": [
         "# Git clone: SORT Algorithm\n",
         "\n",
-        "#!cd \"{MOT_PATH}\";git clone https://github.com/abewley/sort.git\n",
+        "!cd \"{MOT_PATH}\";git clone https://github.com/abewley/sort.git\n",
         "  \n",
         "sort = join(MOT_PATH,'sort/')\n",
         "sys.path.append(sort)"
