--- a/3_Object_Detection_and_MOT_tutorial.ipynb
+++ b/3_Object_Detection_and_MOT_tutorial.ipynb
@@ -46,7 +46,7 @@
         "\n",
         "\n",
         "**Question**\n",
-        "What is Multiple Object Tracking?\n",
+        ": What is Multiple Object Tracking?\n",
         "- Object tracking is one of the tasks in computer vision, which is detecting an object and searching for that object in a video or a series of images (actually both meaning the same thing). \n",
         "- Surveillance cameras in public places for spotting suspicious activities or crimes, and a computer system called 'Hawk-eye' for tracking the trajectory of the ball in various sports are typical examples of applying object tracking in a real life.\n",
         "\n",
